fix logo squished in mobile sidemenu

--- a/themes/aura/styles/navbar.scss
+++ b/themes/aura/styles/navbar.scss
@@ -225,6 +225,8 @@
 
     img {
       max-height: 40px;
+      max-width: 100%;
+      width: fit-content;
     }
   }
 
